--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -166,6 +166,10 @@ span.select2-container--default.select2-container--focus .select2-selection--mul
   border: none !important;
 }
 
+span.select2-container--focus, span.select2-container--open {
+  border-color: $main-color !important;
+}
+
 span.select2-container {
   border-radius: 4px;
   border: 2px solid #eee;
@@ -194,6 +198,7 @@ span.select2-container {
     border-top: none !important;
     border-left: none !important;
     border-right: none !important;
+    background: image-url("chosen-sprite.png") no-repeat 100% -20px;
   }
 
   span.select2-selection__clear {
