FEATURE add blob_key option to namespace asset

--- a/app/views/_form.html.haml
+++ b/app/views/_form.html.haml
@@ -160,6 +160,7 @@
                         }
                       },
                       assetHost: '#{column.options[:asset_host]}',
+                      blobKey: '#{column.options[:blob_key]}',
                       defaultColors: {
                         text: 'red',
                         background: 'transparent'
