FEATURE RichMediaUploader to pass on the upload mechanism to application

--- a/app/views/_form.html.haml
+++ b/app/views/_form.html.haml
@@ -159,6 +159,7 @@
                           $('##{model_name}_#{column_name}_rich_text_editor').parent().removeClass('focused');
                         }
                       },
+                      customUploader: '#{column.options[:custom_uploader]}',
                       defaultColors: {
                         text: 'red',
                         background: 'transparent'
