MISC #211 - Move chosen up of cell of there is no enough space

--- a/app/assets/stylesheets/editor.scss
+++ b/app/assets/stylesheets/editor.scss
@@ -72,10 +72,9 @@
       box-shadow: none;
     }
   }
-  .chosen-drop {
+  .chosen-container {
     display: flex;
     flex-direction: column;
-    top: initial;
     &.reverse {
       flex-direction: column-reverse;
     }
