--- a/app/assets/javascripts/setting/setting.js.erb
+++ b/app/assets/javascripts/setting/setting.js.erb
@@ -1,3 +1,3 @@
 const configuredSelectionColor = "<%= WulinMaster.config.selection_color.presence || WulinMaster.config.default_color %>"
-const configuredGridColorTheme = "<%= WulinMaster.config.grid_theme_color.presence || WulinMaster.config.default_color %>"
+const configuredGridColorTheme = "<%= WulinMaster.config.detail_color_theme.presence || WulinMaster.config.default_color %>"
 const configuredBackgroundColor = "<%= WulinMaster.config.background_color.presence || WulinMaster.config.default_color %>"
