BUG - Fix modal is not jQuery element

--- a/app/views/_content.html.haml
+++ b/app/views/_content.html.haml
@@ -32,7 +32,7 @@
     setTimeout(() => {
       $('.info-modal').modal({
         onOpenEnd: function(modal, trigger) {
-          modal.css('z-index', '9999');
+          $(modal).css('z-index', '9999');
         }
       });
 
