--- a/app/views/_grid.html.haml
+++ b/app/views/_grid.html.haml
@@ -3,9 +3,10 @@
     :ruby
       user_id = (respond_to?(:current_user) && current_user) ? current_user.id : -1
     .grid-header
-      %h2= grid.title
-      - grid.header_actions.each do |a|
-        = render "/action_partials/#{a[:name]}", grid: grid #rescue nil
+      .title-with-actions
+        %h2= grid.title
+        - grid.header_actions.each do |a|
+          = render "/action_partials/#{a[:name]}", grid: grid #rescue nil
       = render './toolbar', toolbar_items: grid.toolbar_items
   .grid
   .pager
