MISC - Add .form class css as element form did

--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -29,7 +29,7 @@ form {
     padding-top: 22px;
     box-shadow: 0 0 2px lightgrey;
   }
-  form {
+  form, .form {
     margin-top: 60px;
   }
   .field-line {
