--- a/app/assets/stylesheets/overrides/materialize.overrides.scss
+++ b/app/assets/stylesheets/overrides/materialize.overrides.scss
@@ -174,6 +174,6 @@ textarea.materialize-textarea {
 // https://gitlab.ekohe.com/ekohe/wulin/wulin_master/-/issues/205
 .chosen-container-multi {
   ul.chosen-choices {
-    height: 24px;
+    min-height: 24px;
   }
 }
