--- a/app/assets/stylesheets/grid.columnpicker.scss
+++ b/app/assets/stylesheets/grid.columnpicker.scss
@@ -26,8 +26,7 @@
     span {
       float: right;
       padding-right: $columnpicker-li-padding;
-      font-size: $font-size-small;
-      padding-top: 4px;
+      font-size: $font-size-small-middle;
     }
   }
 }
