--- a/app/assets/stylesheets/lib/SlickGrid/slick.grid.scss
+++ b/app/assets/stylesheets/lib/SlickGrid/slick.grid.scss
@@ -5,6 +5,13 @@ No built-in (selected, editable, highlight, flashing, invalid, loading, :focus) 
 classes should alter those!
 */
 
+.slick-group-header.ui-state-default {
+  width: 100%;
+  overflow: auto;
+  position: relative;
+  border-left: 0px !important;
+}
+
 .slick-headerrow.ui-state-default,
 .slick-footerrow.ui-state-default {
   width: 100%;
@@ -26,7 +33,7 @@ classes should alter those!
   overflow: hidden;
 }
 
-.slick-header-columns {
+.slick-header-columns, .slick-group-header-columns {
   position: relative;
   white-space: nowrap;
   cursor: default;
@@ -49,6 +56,20 @@ classes should alter those!
   border-top: 1px solid transparent;
   border-bottom: 0px !important;
   float: left;
+}
+
+.slick-footerrow-column.ui-state-default {
+  -o-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  margin: 0;
+  padding: 4px;
+  border-right: 1px solid silver;
+  border-left: 0px;
+  border-top: 0px;
+  border-bottom: 0px;
+  float: left;
+  line-height: 20px;
+  vertical-align: middle;
 }
 
 .slick-headerrow-column.ui-state-default,
@@ -177,4 +198,46 @@ classes should alter those!
   z-index: 10;
   position: absolute;
   border: 2px dashed black;
+}
+
+.slick-pane {
+  position: absolute;
+  outline: 0;
+  overflow: hidden;
+  width: 100%;
+}
+
+.slick-pane-header {
+  display: block;
+}
+
+.slick-header {
+  overflow: hidden;
+  position: relative;
+}
+
+.slick-headerrow {
+  overflow: hidden;
+  position: relative;
+}
+
+.slick-top-panel-scroller {
+  overflow: hidden;
+  position: relative;
+}
+
+.slick-top-panel {
+  width: 10000px
+}
+
+.slick-viewport {
+  position: relative;
+  outline: 0;
+  width: 100%;
+}
+
+.slick-viewport-right {
+  border-left-color: #2196F3;
+  border-left-style: solid;
+  border-left-width: 2px;
 }
