BUG https://gitlab.ekohe.com/ekohe/hbs/bss/-/issues/304 Fix_unit_scale_unit_dependency_in_services_edit_form

--- a/app/assets/stylesheets/select2.scss
+++ b/app/assets/stylesheets/select2.scss
@@ -479,3 +479,8 @@
 
 .select2-container--classic.select2-container--open .select2-dropdown {
   border-color: #5897fb; }
+
+.select2-container .select2-results__option.optInvisible {
+  display: none;
+}
+  
