--- a/app/views/_form.html.haml
+++ b/app/views/_form.html.haml
@@ -102,14 +102,20 @@
                     $(function(){
                       var depend_select_id = "#{model_name}_#{column.options[:depend_column]}";
                       var depend_select = $("select#" + depend_select_id);
-
+                      var current_select_id = "#{model_name}_#{column_name}";
+                      var current_select = $("select#" + current_select_id);
                       $(document).on("change", "select#"+depend_select_id, function(){
-                        var current_select_id = "#{model_name}_#{column_name}";
-                        var current_select = $("select#" + current_select_id);
                         var key = $(this).val();
-                        current_select.find("option").hide().trigger("chosen:updated");
-                        current_select.val("").trigger("chosen:updated");
-                        current_select.find("option[data-key='" + key + "']").show().css("display", "").trigger("chosen:updated");
+                        $(current_select).select2({
+                            templateResult: resultState
+                        });
+                        //select2 display need to be added on the container
+                        function resultState(data, container) {
+                          if($(data.element).data("key") !== key ) {
+                              $(container).addClass("optInvisible");
+                          }
+                          return data.text;
+                         }
                       });
                     });
 
