https://gitlab.ekohe.com/ekohe/hbs/bss_core/-/issues/89 - adding the codeview action to the toolbar

--- a/app/views/_form.html.haml
+++ b/app/views/_form.html.haml
@@ -180,7 +180,7 @@
                         ['table', ['table']],
                         ['para', ['ul', 'ol', 'paragraph']],
                         ['insert', ['link', 'picture', 'video']],
-                        ['view', ['fullscreen']]
+                        ['view', ['fullscreen', 'codeview']]
                       ],
                       callbacks: {
                         onFocus: function() {
