--- a/app/assets/stylesheets/lib/materialnote/overrides.scss
+++ b/app/assets/stylesheets/lib/materialnote/overrides.scss
@@ -190,7 +190,9 @@
 
 // Disabled mode, keep white background
 .note-editor.note-frame
-  .note-editing-area
+  .note-editing-area {
+    padding-top: 16px;
+  }
   .note-editable[contenteditable="false"] {
   background-color: #fff;
 }
