https://gitlab.ekohe.com/ekohe/hbs/bss_core/-/issues/89#note_952348  - change the color of the text in the code view

--- a/app/assets/stylesheets/lib/materialnote/overrides.scss
+++ b/app/assets/stylesheets/lib/materialnote/overrides.scss
@@ -192,6 +192,10 @@
 .note-editor.note-frame
   .note-editing-area {
     padding-top: 16px;
+
+    .note-codable {
+      color: #333 !important;
+    }
   }
   .note-editable[contenteditable="false"] {
   background-color: #fff;
