FEATURE ekohe/hbs/atlas#277 - Make default_year configurable

--- a/app/assets/javascripts/setting/setting.js.erb
+++ b/app/assets/javascripts/setting/setting.js.erb
@@ -1,1 +1,1 @@
-const configuredMasterDetailColorTheme = "<%= WulinMaster.config.master_detail_color_theme %>"
+const configuredMasterDetailColorTheme = "<%= WulinMaster.config.master_detail_color_theme %>";
