FEATURE  ekohe/hbs/atlas#277 - Refine Make default_year Configurable

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,4 +1,4 @@
-- default_year = (WulinMaster.config.default_year.is_a?(Proc) && WulinMaster.config.default_year.call) || WulinMaster.config.default_year
+- default_year = (WulinMaster.config.default_year.respond_to?('call') && WulinMaster.config.default_year.call) || WulinMaster.config.default_year
 
 !!!
 %html
@@ -22,9 +22,9 @@
           displayNewNotification('The browser you are currently using is not supported, we recommend using Chrome.', true);
         }
       });
-      // Pass Ruby value to frontend
       Object.assign(window, {
         DEFAULT_YEAR: String(#{default_year}) // see usage in `datetime.js`
       });
+      ConfigInputmask();
   %body
     = yield
