Feature #262: align checkbox center in edit mode

--- a/app/assets/stylesheets/editor.scss
+++ b/app/assets/stylesheets/editor.scss
@@ -47,6 +47,10 @@
     display: initial;
   }
 
+  .checkbox-editor {
+    text-align: center;
+    display: inline-block;
+  }
 }
 // select
 .select-editor {
