--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,3 +1,5 @@
+- default_year = (WulinMaster.config.default_year.respond_to?('call') && WulinMaster.config.default_year.call) || WulinMaster.config.default_year
+
 !!!
 %html
   %head
@@ -20,5 +22,9 @@
           displayNewNotification('The browser you are currently using is not supported, we recommend using Chrome.', true);
         }
       });
+      Object.assign(window, {
+        DEFAULT_YEAR: String(#{default_year}) // see usage in `datetime.js`
+      });
+      ConfigInputmask();
   %body
     = yield
