https://gitlab.ekohe.com/ekohe/wulin/wulin_master/-/issues/256 - Added error message on the popup if validation is not valid

--- a/app/views/action_partials/_multiple_grid_states.html.haml
+++ b/app/views/action_partials/_multiple_grid_states.html.haml
@@ -90,6 +90,8 @@
         if (response == 'success') {
           $('#create-state-modal').modal('close');
           location.reload();
+        } else {
+          displayErrorMessage(response)
         }
       });
     });
@@ -132,6 +134,9 @@
             $('#current-state span').text(newName);
           }
           $('#edit-state-modal').modal('close');
+          displayNewNotification('View is updated successfully!')
+        } else {
+          displayErrorMessage(response)
         }
       });
     });
@@ -142,6 +147,8 @@
         if (response == 'success') {
           $('#edit-state-modal').modal('close');
           location.reload();
+        } else {
+          displayErrorMessage(response)
         }
       });
     });
