MISC#280 default month behavior fix and description in initializer

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,5 +1,5 @@
 - default_year = (WulinMaster.config.default_year.respond_to?('call') && WulinMaster.config.default_year.call) || WulinMaster.config.default_year
-- default_year = (WulinMaster.config.default_month.respond_to?('call') && WulinMaster.config.default_month.call) || WulinMaster.config.default_month
+- default_month = (WulinMaster.config.default_month.respond_to?('call') && WulinMaster.config.default_month.call) || WulinMaster.config.default_month
 
 !!!
 %html
