--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -26,7 +26,7 @@
       Object.assign(window, {
         DEFAULT_YEAR: String(#{default_year}), // see usage in `datetime.js`
         DEFAULT_MONTH: String(#{default_month}),
-        DATE_FORMAT: String(#{WulinMaster.config.date_format.inspect})
+        DATE_FORMAT: String("#{WulinMaster.config.date_format}")
       });
       ConfigInputmask();
   %body
